improve spec kit
